[metadata]
name = preturk-akgeni
version = 0.0.1
author = Anshu Kumar
author_email = akgeni@gmail.com
description = ML based sample selection and evalation of manually labeled examples.
long_description = file: README.md
long_description_content_type = ML based sample selection for manual annotation. Also includes evaluation(consistency, agreement etc) of manually labeled examples.
url = https://github.com/akgeni/preturk.git
project_urls =
    Bug Tracker = https://github.com/akgeni/preturk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
